tdf#125460 load docx with shapes faster

some small tweaks that take the load time from 20m to 15m.

(*) in SvxShape::Notify, we don't need to handle ObjectChange anymore,
when the UNO shape attached to an SdrObject changes, the SdrObject will
explicitly call the related UNO object and update it.

(*) in SdrObjGroup::Rotate we sometimes see nAngle == -36000, which
semantically the same as 0 rotation.

(*) in SvxTextEditSourceImpl::Notify, we only the self-hold during
dying, not for all the other objects.

The bulk of the time saving is in the first change

Change-Id: I48c60675c0b5fdc714b3bce4e3ad310b68256105